--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    width: 100%;
+    background: #fff;
+    margin: 30px auto;
+    padding: 60px 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stopwatch {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fiels-container {
+    display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.value {
+    background: #3b5174;
+    color: #fff;
+    display: inline-block;
+    font-family: monospace;
+    font-size: 22px;
+    padding: 20px;
+    border-radius: 5px;
+    width: 70px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.separator {
+    color: #3b5174;
+    font-size: 30px;
+}
+
+.btn {
+    background: #fff;
+    margin-top: 30px;
+    margin-left: 5px;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    text-transform: uppercase;
+    width: 150px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.btn-red {
+    border: 2px solid #c85454;
+    color: #c85454;
+}
+
+.btn-yellow {
+    border: 2px solid #ffc900;
+    color: #ffc900;
+}
+
+.btn-green {
+    border: 2px solid #3b5174;
+    color: #3b5174;
+}
+
+.btn-red:hover {
+    background: #c85454;
+    border: 2px solid #c85454;
+    color: #fff;
+}
+
+.btn-yellow:hover {
+    background: #ffc900;
+    border: 2px solid #ffc900;
+    color: #fff;
+}
+
+.btn-green:hover {
+    background: #3b5174;
+    border: 2px solid #3b5174;
+    color: #fff;
 }
